struggling with MultiValidator

--- a/eclipse_ws/biobank2/README
+++ b/eclipse_ws/biobank2/README
@@ -12,4 +12,6 @@ NOTES:
   Async update: http://dev.eclipse.org/newslists/news.eclipse.platform.rcp/msg32257.html
   
   
-  
+ 
+TODO
+  - Consider using PShelf Widget from Nebula: http://www.eclipse.org/nebula/
