--- a/README
+++ b/README
@@ -99,3 +99,7 @@ For both primary key generation and cascade settings:
 Following code generation, primary key and cascade settings you have applied to
 the model can be verified by opening the corresponding generated *.hbm.xml file
 located within the /output/<<project name>>/src/ sub-folders.
+
+BBPDB EXPORT
+- use Bullzip Access to Mysql to export data to MySQL
+- table "patient" must be exported using MS Access due to CHR data
