--- a/eclipse_ws/biobank2.importer/README
+++ b/eclipse_ws/biobank2.importer/README
@@ -1,5 +1,6 @@
 CONTACTS
-  select contact.name, clinic.name, study.name from contact 
+  select contact.name, clinic.name, study.name_short from contact 
   join clinic on clinic.id=contact.clinic_id 
   left join study_contact on contact.id=contact_id
   left join study on study.id=study_contact.study_id
+
