--- a/eclipse_ws/biobank2.importer/README
+++ b/eclipse_ws/biobank2.importer/README
@@ -43,3 +43,14 @@ QUERY TO GENERATE THE VISITS WITH WRONG STUDY_NR
   patient_visit_study_nr from freezer join patient_visit on 
   freezer.visit_nr=patient_visit.visit_nr 
   where freezer.study_nr<>patient_visit.study_nr order by fnum, rack, box, cell
+  
+FIND DUPLICATE INVENTORY IDS IN BBPDB
+  select * from freezer
+  join (
+  select inventory_id, count(*) as inv_id_count 
+  from freezer 
+  where inventory_id is not null and fnum<>99
+  group by inventory_id) as A on freezer.inventory_id=A.inventory_id
+  where A.inv_id_count > 1 and fnum=3
+  order by freezer.inventory_id
+  
