resolves #413: page count + date formatting in prints

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
@@ -50,11 +50,11 @@ ScanAssign.activitylog.aliquot.positionTaken=ERROR in {0}: Expected inventoryId 
 ScanAssign.activitylog.aliquot.moved=MOVED in {0}: aliquot {1} registered on another pallet at position {2}
 ScanAssign.activitylog.aliquot.typeError=ERROR in {0}: this pallet type {1} can't hold an aliquot that contains a sample of type {2}
 ScanAssign.activitylog.aliquot.inventoryIdError=ERROR in {0}: More than one aliquot found with the inventoryId {1}
-ScanAssign.activitylog.aliquot.assigned=ASSIGNED position {0} to aliquot {1} - Type: {2} - Patient: {3} - Visit: {4}-{5}
+ScanAssign.activitylog.aliquot.assigned=ASSIGNED position {0} to aliquot {1} - Type: {2} - Patient: {3} - Visit: {4}-{5}\n
 ScanAssign.activitylog.save.summary=SCAN-ASSIGN: {0} aliquots added to pallet {1}
 ScanAssign.okMessage=Assigning aliquots location.
 ScanLink.activitylog.aliquot.existsError=ERROR in {0}: Aliquot {1} already in database into visit {2} of patient {3}
-ScanLink.activitylog.aliquot.linked=LINKED: {0} - patient: {1} - Visit: {2} - {3} - {4}
+ScanLink.activitylog.aliquot.linked=LINKED: {0} - patient: {1} - Visit: {2} - {3} - {4}\n
 ScanLink.activitylog.save.summary=SCAN-LINK: {0} aliquots linked to visit {1}
 Cabinet.activitylog.checkingId=Checking inventoryID {0}
 Cabinet.activitylog.checkingPosition=Checking position {0}
