working on features #407,#415

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
@@ -6,6 +6,7 @@ linkAssign.scanButton.text=Launch scan
 linkAssign.plateToScan.validationMsg=Enter a valid plate barcode
 linkAssign.scanLaunchValidationMsg=Scanner should be launched
 linkAssign.activitylog.visit.selection=Visit selected {0} - {1}
+linkAssign.dialog.scanError.title=Scan result error
 
 # ScanAssign
 ScanAssign.formTitle=Assign aliquot locations using the scanner
@@ -28,7 +29,6 @@ ScanAssign.scanStatus.aliquot.inventoryIdError=More than one aliquot found with 
 ScanAssign.scanStatus.aliquot.positionTakenError=Aliquot different from the one registered at this position
 ScanAssign.dialog.saveWithMissing.msg=Aliquots are missing from this pallet, are you sure you want to save ? \
 These aliquots will still be registered at their current position.
-ScanAssign.dialog.scanError.title=Scan result error
 ScanAssign.dialog.checkPallet.otherPosition=This pallet is already registered in the database in position {0}. \
 Do you want to move it to new position {1} ?
 ScanAssign.dialog.positionUsed.title=Position error"
@@ -76,7 +76,7 @@ ScanLink.dialog.patient.errorMsg=Error getting the patient
 ScanLink.dialog.sampleTypesError.msg=No sample type found for containers of container type containing {0}
 ScanLink.dialog.sampleTypesError.title=Sample Types
 ScanLink.form.title=Link aliquots to patient visit using the scanner
-ScanLink.okMessage=Adding Aliquots.
+ScanLink.okMessage=Linking Aliquots to visits.
 ScanLink.patientNumber.label=Patient Number
 ScanLink.patientNumber.validationMsg=Enter a patient number
 ScanLink.rowChoice.label=Row choice
