--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
@@ -1,11 +1,8 @@
 # common to all LinkAssign forms
-linkAssign.activitylog.scanning=----SCAN on plate {0}----
-linkAssign.activitylog.patient=Found patient with number {0}
 linkAssign.plateToScan.label=Plate to scan
 linkAssign.scanButton.text=Launch scan
 linkAssign.plateToScan.validationMsg=Enter a valid plate barcode
 linkAssign.scanLaunchValidationMsg=Scanner should be launched
-linkAssign.activitylog.visit.selection=Visit selected {0} - {1}
 linkAssign.dialog.scanError.title=Scan result error
 
 # ScanAssign
@@ -23,7 +20,7 @@ ScanAssign.dialog.noPalletFoundError.msg=No container type found with name conta
 ScanAssign.dialog.reallySave.title=Really save ?
 ScanAssign.scanStatus.aliquot.missing=Aliquot {0} missing
 ScanAssign.scanStatus.aliquot.notlinked=Aliquot not linked
-ScanAssign.scanStatus.aliquot.moved=Aliquot registered on another pallet with position {0}
+ScanAssign.scanStatus.aliquot.moved=Aliquot registered on another position {0}
 ScanAssign.scanStatus.aliquot.typeError=This pallet type {0} can't hold an aliquot that contains a sample of type {1}
 ScanAssign.scanStatus.aliquot.inventoryIdError=More than one aliquot found with the inventoryId {0}
 ScanAssign.scanStatus.aliquot.positionTakenError=Aliquot different from the one registered at this position
@@ -35,7 +32,10 @@ ScanAssign.dialog.positionUsed.title=Position error"
 ScanAssign.dialog.positionUsed.msg=There is already a different pallet (product barcode = {0}) in this position
 
 # activity logs
-ScanAssign.activitylog.scanRes.total=Scan completed - {0} aliquots found
+linkAssign.activitylog.scanning=----SCAN on plate {0}----
+linkAssign.activitylog.patient=Found patient with number {0}
+linkAssign.activitylog.visit.selection=Visit selected {0} - {1}
+linkAssign.activitylog.scanRes.total=Scan completed - {0} aliquots found
 ScanAssign.activitylog.pallet.checkLabel=Checking label position {0}
 ScanAssign.activitylog.pallet.checkingPosition=Checking position label {0}
 ScanAssign.activitylog.pallet.checkingProductBarcode=Checking product barcode {0}
