Small scanLink/scanAssign modifications

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
@@ -20,7 +20,7 @@ ScanAssign.dialog.noPalletFoundError.msg=No container type found with name conta
 ScanAssign.dialog.reallySave.title=Really save ?
 ScanAssign.scanStatus.aliquot.missing=Aliquot {0} missing
 ScanAssign.scanStatus.aliquot.notlinked=Aliquot not linked
-ScanAssign.scanStatus.aliquot.moved=Aliquot registered on another position {0}
+ScanAssign.scanStatus.aliquot.moved=Aliquot registered on another position: {0}
 ScanAssign.scanStatus.aliquot.typeError=This pallet type {0} can''t hold an aliquot that contains a sample of type {1}
 ScanAssign.scanStatus.aliquot.inventoryIdError=More than one aliquot found with the inventoryId {0}
 ScanAssign.scanStatus.aliquot.positionTakenError=Aliquot different from the one registered at this position
@@ -47,7 +47,7 @@ ScanAssign.activitylog.pallet.added=ADDED: Pallet {0} of type {1} added to posit
 ScanAssign.activitylog.aliquot.missing=MISSING in {0}: aliquot {1} from visit {2} (patient {3}) missing
 ScanAssign.activitylog.aliquot.notlinked=ERROR in {0}: aliquot {1} not linked to any patient
 ScanAssign.activitylog.aliquot.positionTaken=ERROR in {0}: Expected inventoryId {1} from patient {2} -- Found inventoryId {3} from patient {4}
-ScanAssign.activitylog.aliquot.moved=MOVED in {0}: aliquot {1} registered on another pallet at position {2}
+ScanAssign.activitylog.aliquot.moved=MOVED in {0}: aliquot {1} registered on another position: {2}
 ScanAssign.activitylog.aliquot.typeError=ERROR in {0}: this pallet type {1} can''t hold an aliquot that contains a sample of type {2}
 ScanAssign.activitylog.aliquot.inventoryIdError=ERROR in {0}: More than one aliquot found with the inventoryId {1}
 ScanAssign.activitylog.aliquot.assigned=ASSIGNED position {0} to aliquot {1} - Type: {2} - Patient: {3} - Visit: {4}-{5}\n
