--- a/README
+++ b/README
@@ -102,3 +102,6 @@ located within the /output/<<project name>>/src/ sub-folders.
 
 BBPDB EXPORT
 - use Bullzip Access to Mysql to export data to MySQL
+
+
+CORRUPTION TEST
