Working on #412: on Cabinet Link/Assign, a position selection should modify the sample type list

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
@@ -61,7 +61,7 @@ Cabinet.activitylog.checkingPosition=Checking position {0}
 Cabinet.activitylog.checkPosition.error=ERROR: Position {0} already in use in container {1}
 Cabinet.activitylog.checkingParent=Checking parent container{0} for type {1}
 Cabinet.activitylog.checkParent.error.type=Bin labelled {0} cannot hold aliquots that contain a sample of type {1}
-Cabinet.activitylog.checkParent.error.found=Can't find bin labelled {0}
+Cabinet.activitylog.checkParent.error.found=Can''t find bin labelled {0}
 Cabinet.activitylog.checkParent.error=ERROR: {0}
 Cabinet.activitylog.gettingInfoId=Getting informations for inventoryID {0}
 Cabinet.activitylog.aliquotInfo=Aliquot {0}: current position={1}
