made FormInput more generic

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
@@ -107,3 +107,6 @@ Cabinet.tabTitle=Cabinet Link/Assign
 Cabinet.visit.label=Visit
 Cabinet.visit.validationMsg=A visit should be selected
 Cabinet.checkStatus.error=Position {0} already in use in container {1}
+
+#Decode Plate
+DecodePlate.tabTitle=Decode Plate {0}
