--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
@@ -110,3 +110,4 @@ Cabinet.checkStatus.error=Position {0} already in use in container {1}
 
 #Decode Plate
 DecodePlate.tabTitle=Decode Plate {0}
+DecodePlate.dialog.scanError.title=Scan result error
