--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
@@ -109,9 +109,9 @@ Cabinet.visit.validationMsg=A visit should be selected
 Cabinet.checkStatus.error=Position {0} already in use in container {1}
 
 #Decode Plate
-DecodePlate.tabTitle=Decode Plate {0}
+DecodePlate.tabTitle=Decode Plate
 DecodePlate.dialog.scanError.title=Scan result error
 
 #Scan Plate
-ScanPlate.tabTitle=Scan Plate {0}
+ScanPlate.tabTitle=Scan Plate
 ScanPlate.dialog.scanError.title=Scan result error
