Update Scan Assign to allow pallets that have been initialized.

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
@@ -2,7 +2,9 @@
 linkAssign.plateToScan.label=Plate to scan
 linkAssign.scanButton.text=Launch scan
 linkAssign.plateToScan.validationMsg=Enter a valid plate barcode
-linkAssign.scanLaunchValidationMsg=Scanner should be launched
+linkAssign.canLaunchScanValidationMsg=Errors have been previously detected. Cannot launch scan.
+linkAssign.scanHasBeenLaunchedValidationMsg=Scanner should be launched
+linkAssign.scanValidValidationMsg=Errors in scanning result
 linkAssign.dialog.scanError.title=Scan result error
 
 # ScanAssign
@@ -14,7 +16,6 @@ ScanAssign.palletLabel.validationMsg=Enter position code (ie. 01AA02)
 ScanAssign.palletType.label=Pallet Container Type
 ScanAssign.palletType.validationMsg=A pallet type should be selected
 ScanAssign.tabTitle=Scan Assign
-ScanAssign.scanErrorMsg=Error in scanning result
 ScanAssign.dialog.noPalletFoundError.title=No Pallet defined ?
 ScanAssign.dialog.noPalletFoundError.msg=No container type found with name containing ''{0}''
 ScanAssign.dialog.reallySave.title=Really save ?
