--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
@@ -37,9 +37,11 @@ linkAssign.activitylog.scanning=----SCAN on plate {0}----
 linkAssign.activitylog.patient=Found patient with number {0}
 linkAssign.activitylog.visit.selection=Visit selected {0} - {1}
 linkAssign.activitylog.scanRes.total=Scan completed - {0} aliquots found
-ScanAssign.activitylog.pallet.checkLabel=Checking label position {0}
-ScanAssign.activitylog.pallet.checkingPosition=Checking position label {0}
-ScanAssign.activitylog.pallet.checkingProductBarcode=Checking product barcode {0}
+ScanAssign.activitylog.pallet.checkLabelForProductBarcode=Checking label position {0} for product barcode {1}
+ScanAssign.activitylog.pallet.checkingPositionAvailable=Checking position label {0} is available
+ScanAssign.activitylog.pallet.positionAvailable=Position {0} is available
+ScanAssign.activitylog.pallet.positionInitialized=Position {0} initialised and free to be used
+ScanAssign.activitylog.pallet.productBarcode.exists=Product barcode {0} already exists at position {1} with type {2}.
 ScanAssign.activitylog.pallet.moveInfo=Pallet {0} will be moved from position {1} to position {2}
 ScanAssign.activitylog.pallet.typeUsed=Pallet container type used: {0}
 ScanAssign.activitylog.pallet.positionUsedMsg=Pallet with product barcode {0} is already in position {1}
