update messages for issue #495

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
@@ -40,7 +40,7 @@ linkAssign.activitylog.scanRes.total=Scan completed - {0} aliquots found
 ScanAssign.activitylog.pallet.checkLabelForProductBarcode=Checking label position {0} for product barcode {1}
 ScanAssign.activitylog.pallet.checkingPositionAvailable=Checking position label {0} is available
 ScanAssign.activitylog.pallet.positionAvailable=Position {0} is available
-ScanAssign.activitylog.pallet.positionInitialized=Position {0} initialised and free to be used
+ScanAssign.activitylog.pallet.positionInitialized=Position {0} initialised with type {1} and free to be used
 ScanAssign.activitylog.pallet.productBarcode.exists=Product barcode {0} already exists at position {1} with type {2}.
 ScanAssign.activitylog.pallet.moveInfo=Pallet {0} will be moved from position {1} to position {2}
 ScanAssign.activitylog.pallet.typeUsed=Pallet container type used: {0}
