working on #506: fields added but not functional

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
@@ -102,6 +102,8 @@ Cabinet.formTitle=Link and Assign Cabinet Aliquots
 Cabinet.inventoryId.label=Inventory ID
 Cabinet.patientNumber.label=Patient Number
 Cabinet.patientNumber.validationMsg=Enter a patient number
+Cabinet.old.position.label=Old position
+Cabinet.old.position.check.label=Old position check
 Cabinet.position.label=Position
 Cabinet.position.validationMsg=Enter a position (eg 01AA01AB)
 Cabinet.sampleType.label=Sample type
