resolves #492: Update scan assign to accept label position with more than 6 characters

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
@@ -12,7 +12,7 @@ ScanAssign.formTitle=Assign aliquot locations using the scanner
 ScanAssign.productBarcode.label=Pallet product barcode
 ScanAssign.productBarcode.validationMsg=Enter pallet position code
 ScanAssign.palletLabel.label=Pallet label
-ScanAssign.palletLabel.validationMsg=Enter position code (ie. 01AA02)
+ScanAssign.palletLabel.validationMsg=Enter position code (for example 01AA02)
 ScanAssign.palletType.label=Pallet Container Type
 ScanAssign.palletType.validationMsg=A pallet type should be selected
 ScanAssign.tabTitle=Scan Assign
