--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
@@ -34,13 +34,13 @@ ScanAssign.dialog.positionUsed.msg=There is already a different pallet (product 
 
 # activity logs
 linkAssign.activitylog.scanning=----SCAN on plate {0}----
+linkAssign.activitylog.rescanning=----RESCAN on plate {0}----
 linkAssign.activitylog.patient=Found patient with number {0}
 linkAssign.activitylog.visit.selection=Visit selected {0} - {1}
 linkAssign.activitylog.scanRes.total=Scan completed - {0} aliquots found
 linkAssign.activitylog.scanTubeAlone=Tube {0} scanned and set to position {1}
 ScanAssign.activitylog.pallet.checkLabelForProductBarcode=Checking label position {0} for product barcode {1}
-ScanAssign.activitylog.pallet.checkingPositionAvailable=Checking position label {0} is available
-ScanAssign.activitylog.pallet.checkPosition.error=ERROR: {0}
+ScanAssign.activitylog.error=ERROR: {0}
 ScanAssign.activitylog.pallet.positionInitialized=Position {0} initialised with type {1} and free to be used
 ScanAssign.activitylog.pallet.productBarcode.exists=Product barcode {0} already exists at position {1} with type {2}.
 ScanAssign.activitylog.pallet.moveInfo=Pallet {0} will be moved from position {1} to position {2}
