--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
@@ -29,8 +29,10 @@ ScanAssign.dialog.saveWithMissing.msg=Aliquots are missing from this pallet, are
 These aliquots will still be registered at their current position.
 ScanAssign.dialog.checkPallet.otherPosition=This pallet is already registered in the database in position {0}. \
 Do you want to move it to new position {1} ?
-ScanAssign.dialog.positionUsed.title=Position error"
-ScanAssign.dialog.positionUsed.msg=There is already a different pallet (product barcode = {0}) in this position
+ScanAssign.dialog.positionUsed.error.title=Position error
+ScanAssign.dialog.positionUsed.error.msg=There is already a different pallet (product barcode = {0}) in this position
+ScanAssign.dialog.positionUsed.noBarcode.title=Position used with no barcode
+ScanAssign.dialog.positionUsed.noBarcode.question=This position is already used but the product barcode was not set. Do you want to set a product barcode ?
 
 # activity logs
 linkAssign.activitylog.scanning=----SCAN on plate {0}----
@@ -42,6 +44,7 @@ linkAssign.activitylog.scanTubeAlone=Tube {0} scanned and set to position {1}
 ScanAssign.activitylog.pallet.checkLabelForProductBarcode=Checking label position {0} for product barcode {1}
 ScanAssign.activitylog.error=ERROR: {0}
 ScanAssign.activitylog.pallet.positionInitialized=Position {0} initialised with type {1} and free to be used
+ScanAssign.activitylog.pallet.positionUsedWithNoProductBarcode=Position {0} already used with no product barcode and with type {1}. Product barcode {2} will be set.
 ScanAssign.activitylog.pallet.productBarcode.exists=Product barcode {0} already exists at position {1} with type {2}.
 ScanAssign.activitylog.pallet.moveInfo=Pallet {0} will be moved from position {1} to position {2}
 ScanAssign.activitylog.pallet.typeUsed=Pallet container type used: {0}
