resolves #683 : scanAssign and CabinetLinkAssign can now accept whatever size of string as a label position

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
@@ -10,9 +10,9 @@ linkAssign.dialog.scanError.title=Scan result error
 # ScanAssign
 ScanAssign.formTitle=Assign aliquot locations using the scanner
 ScanAssign.productBarcode.label=Pallet product barcode
-ScanAssign.productBarcode.validationMsg=Enter pallet position code
+ScanAssign.productBarcode.validationMsg=Enter product barcode
 ScanAssign.palletLabel.label=Pallet label
-ScanAssign.palletLabel.validationMsg=Enter position code (for example 01AA02)
+ScanAssign.palletLabel.validationMsg=Enter label
 ScanAssign.palletType.label=Pallet Container Type
 ScanAssign.palletType.validationMsg=A pallet type should be selected
 ScanAssign.tabTitle=Scan Assign
@@ -111,7 +111,7 @@ Cabinet.old.position.label=Old position
 Cabinet.old.position.check.label=Old position check
 Cabinet.position.label=Position
 Cabinet.new.position.label=New position
-Cabinet.position.validationMsg=Enter a position (eg 01AA01AB)
+Cabinet.position.validationMsg=Enter a position
 Cabinet.sampleType.label=Sample type
 Cabinet.sampleType.validationMsg=A sample type should be selected
 Cabinet.tabTitle=Cabinet Link/Assign
