Remove all "Active" "Closed"... string to use static fields from ActivityStatusWrapper class

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
@@ -25,6 +25,7 @@ ScanAssign.scanStatus.aliquot.moved=Aliquot registered on another position: {0}
 ScanAssign.scanStatus.aliquot.typeError=This pallet type {0} can''t hold an aliquot that contains a sample of type {1}
 ScanAssign.scanStatus.aliquot.inventoryIdError=More than one aliquot found with the inventoryId {0}
 ScanAssign.scanStatus.aliquot.positionTakenError=Aliquot different from the one registered at this position
+ScanAssign.scanStatus.aliquot.dispatchedError=Cannot assign position to an aliquot that still has a ''{0}'' status.
 ScanAssign.dialog.saveWithMissing.msg=Aliquots are missing from this pallet, are you sure you want to save ? \
 These aliquots will still be registered at their current position.
 ScanAssign.dialog.checkPallet.otherPosition=This pallet is already registered in the database in position {0}. \
