--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
@@ -55,6 +55,7 @@ ScanAssign.activitylog.pallet.added=ADDED: Pallet {0} of type {1} added to posit
 ScanAssign.activitylog.aliquot.missing=MISSING in {0}: aliquot {1} from visit {2} (patient {3}) missing
 ScanAssign.activitylog.aliquot.notlinked=ERROR in {0}: aliquot {1} not linked to any patient
 ScanAssign.activitylog.aliquot.positionTaken=ERROR in {0}: Expected inventoryId {1} from patient {2} -- Found inventoryId {3} from patient {4}
+ScanAssign.activitylog.aliquot.dispatchedError=ERROR in {0}: Cannot assign position to an aliquot that still has a ''{1}'' status.
 ScanAssign.activitylog.aliquot.moved=MOVED in {0}: aliquot {1} registered on another position: {2}
 ScanAssign.activitylog.aliquot.typeError=ERROR in {0}: this pallet type {1} can''t hold an aliquot that contains a sample of type {2}
 ScanAssign.activitylog.aliquot.inventoryIdError=ERROR in {0}: More than one aliquot found with the inventoryId {1}
