resolves #730: scan assign displays child container types of capacity 8 rows by 12 columns

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
@@ -8,7 +8,7 @@ linkAssign.scanValidValidationMsg=Errors in scanning result
 linkAssign.dialog.scanError.title=Scan result error
 
 # ScanAssign
-ScanAssign.formTitle=Assign aliquot locations using the scanner
+ScanAssign.formTitle=Assign aliquot locations
 ScanAssign.productBarcode.label=Pallet product barcode
 ScanAssign.productBarcode.validationMsg=Enter product barcode
 ScanAssign.palletLabel.label=Pallet label
@@ -17,7 +17,7 @@ ScanAssign.palletType.label=Pallet Container Type
 ScanAssign.palletType.validationMsg=A pallet type should be selected
 ScanAssign.tabTitle=Scan Assign
 ScanAssign.dialog.noPalletFoundError.title=No Pallet defined ?
-ScanAssign.dialog.noPalletFoundError.msg=No container type found with name containing ''{0}''
+ScanAssign.dialog.noPalletFoundError.msg=No child container types found with 8 rows and 12 columns
 ScanAssign.dialog.reallySave.title=Really save ?
 ScanAssign.scanStatus.aliquot.missing=Aliquot {0} missing
 ScanAssign.scanStatus.aliquot.notlinked=Aliquot not linked
