add DispatchShipmentAliquot table that contains the state of the aliquot in a DispatchShipment

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
@@ -82,7 +82,7 @@ ScanLink.scanStatus.aliquot.alreadyExists=Aliquot already in database
 ScanLink.custom.type.label=Choose type for selected aliquots:
 ScanLink.customChoice.label=Custom Selection choice
 ScanLink.dialog.patient.errorMsg=Error getting the patient
-ScanLink.dialog.sampleTypesError.msg=No sample type found for containers of container type containing {0}
+ScanLink.dialog.sampleTypesError.msg=No sample type found for containers of size 8*12
 ScanLink.dialog.sampleTypesError.title=Sample Types
 ScanLink.form.title=Link aliquots to patient visit using the scanner
 ScanLink.okMessage=Linking Aliquots to visits.
