--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
@@ -39,7 +39,7 @@ ScanAssign.dialog.positionUsed.noBarcode.question=This position is already used 
 linkAssign.activitylog.scanning=----SCAN on plate {0}----
 linkAssign.activitylog.rescanning=----RESCAN on plate {0}----
 linkAssign.activitylog.patient=Found patient with number {0}
-linkAssign.activitylog.visit.selection=Visit selected {0} - {1}
+linkAssign.activitylog.visit.selection=Visit selected; Drawn: {0}; Processed: {1}; Clinic: {2}
 linkAssign.activitylog.scanRes.total=Scan completed - {0} aliquots found
 linkAssign.activitylog.scanTubeAlone=Tube {0} scanned and set to position {1}
 ScanAssign.activitylog.pallet.checkLabelForProductBarcode=Checking label position {0} for product barcode {1}
@@ -64,7 +64,7 @@ ScanAssign.activitylog.save.summary=SCAN-ASSIGN: {0} aliquots added to pallet {1
 ScanAssign.okMessage=Assigning aliquots location.
 ScanLink.activitylog.aliquot.existsError=ERROR in {0}: Aliquot {1} already in database into visit {2} of patient {3}
 ScanLink.activitylog.aliquot.linked=LINKED: {0} - patient: {1} - Visit: {2} - {3} - {4}\n
-ScanLink.activitylog.save.summary=SCAN-LINK: {0} aliquots linked to visit {1}
+ScanLink.activitylog.save.summary=SCAN-LINK: {0} aliquots linked to patient {1} for visit drawn on {2} (processed on {3})
 Cabinet.activitylog.checkingId=Checking inventoryID {0}
 Cabinet.activitylog.checkingPosition=Checking position {0}
 Cabinet.activitylog.checkPosition.error=ERROR: Position {0} already in use in container {1}
@@ -92,7 +92,8 @@ ScanLink.rowChoice.label=Row choice
 ScanLink.sampleType.select.validationMsg=Give a type to each aliquot
 ScanLink.scanError.validationMsg=Errors in scan \!
 ScanLink.tabTitle=Scan Link
-ScanLink.visit.label=Visit date processed
+ScanLink.visit.label.drawn=Visit date drawn
+ScanLink.visit.label.processed=Visit date processed
 ScanLink.visit.validationMsg=A visit should be selected
 
 #Cabinet
