--- a/docs/javaClientUserGuide/document.tex
+++ b/docs/javaClientUserGuide/document.tex
@@ -14,6 +14,8 @@
 \mainmatter
 \include{overview}
 \include{configuration}
+%need to have dispatch as chapter 5
+\include{dispatch}
 \include{notdone}
 
 \backmatter
