--- a/docs/javaClientUserGuide/dispatch.tex
+++ b/docs/javaClientUserGuide/dispatch.tex
@@ -1,4 +1,35 @@
 \chapter{Dispatch}
+
+The Dispatch feature is used to record the shipping of a set of patient sample
+aliquots between two repository sites where all the patients and aliquots
+belong to a single study.  Aliquots from multiple patients may be included in a
+dispatch.  To use the dispatch feature in BioBank2 the two sites and the study
+involved must first be configured. See section 5.1 for instructions.
+
+Prior to sending the dispatch, the administrator of the sending site must
+create a Dispatch entry that records the aliquots that are part of the
+shipment. After the entry is created and the shipment is ready to be sent, the
+administrator must mark the entry as Sent. At this point BioBank2 displays the
+shipment entry as In Transit. See section 5.3 for instructions.  Sites that
+wish to send dispatches can only send aliquots that have been scan assigned to
+container positions. Aliquots without a position are not allowed in a dispatch.
+
+When receiving a dispatch, a technician with the appropriate role must Receive
+and Process the dispatch entry in BioBank2. Only entries marked as In Transit
+can be received and processed. A technician has the option of only marking an
+entry as received and then process it at a later time. Processing of a dispatch
+entry involves confirming that the aliquots recorded as sent are actually
+received. See section 5.4 for instructions.  The following errors can happen
+when sending a dispatch:
+
+• The shipment never arrives at the destination site.
+• One or more aliquots marked as sent are not actually received at the receiving site,
+• One or more aliquots never marked as sent are received at the receiving site.
+
+Please see sections 5.5, 5.6 and 5.7 for instructions on how to deal with these
+cases.  If a repository site no longer sends dispatches, the instructions to
+remove the dispatche information is given in section 5.2.
+
 \section{Configure Site for Sending Dispatches}
 \section{Configure a Site to No Longer Send Dispatches}
 \section{Sending a Dispatch}
