working on user manual

--- a/docs/javaClientUserGuide/document.tex
+++ b/docs/javaClientUserGuide/document.tex
@@ -1,5 +1,17 @@
-\documentclass[11pt,twoside,letter]{book}
+\documentclass[10pt,twoside,letterpaper]{book}
+\usepackage[T1]{fontenc}
+\usepackage{bookman}
 \usepackage[active]{srcltx}
+\usepackage{color}
+\usepackage{graphicx}
+\usepackage{float}
+
+\oddsidemargin  0.0in
+\evensidemargin 0.0in
+\textwidth      6.75in
+\headheight     0.0in
+\topmargin      0.0in
+\textheight=9.0in
 
 \begin{document}
 \frontmatter
