working on user guide

--- a/docs/javaClientUserGuide/document.tex
+++ b/docs/javaClientUserGuide/document.tex
@@ -26,6 +26,8 @@
 \mainmatter
 \include{overview}
 \include{configuration}
+\include{patient_processing}
+\include{sample_order}
 %need to have dispatch as chapter 5
 \include{dispatch}
 \include{notdone}
